force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/leaseworks__Non_Lease_Agreements__c.object-meta.xml
<CustomObject>
    <label>Non-Lease Agreement</label>
    <nameField>
        <label>Non-Lease Agreements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-Lease Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>