force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/fields/leaseworks__Actual_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_Closing_Date__c</fullName>
    <label>Actual Closing Date</label>
    <type>Date</type>
</CustomField>