force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Non-Lease Agreements</relationshipLabel>
    <relationshipName>Non_Lease_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>