force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/fields/leaseworks__Contract_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contract_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non-Lease Agreements (Contract Party)</relationshipLabel>
    <relationshipName>Non_Lease_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>