force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/fields/leaseworks__Current_Rental_Amount_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rental_Amount_F__c</fullName>
    <formula>leaseworks__Current_Rental_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>