force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/fields/leaseworks__Net_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Price__c</fullName>
    <formula>leaseworks__Gross_Price__c - leaseworks__Deposit_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>