force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/recordTypes/Consignment.recordType-meta.xml
<RecordType>
    <fullName>Consignment</fullName>
    <active>true</active>
    <label>Consignment</label>
</RecordType>