force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/recordTypes/Consignment_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Consignment_Agreement</fullName>
    <active>true</active>
    <label>Consignment Agreement</label>
</RecordType>