force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/recordTypes/leaseworks__Fees.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Fees</fullName>
    <active>true</active>
    <label>Fees</label>
</RecordType>