force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/recordTypes/leaseworks__Others.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Others</fullName>
    <active>true</active>
    <label>Others</label>
</RecordType>