force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/recordTypes/leaseworks__Sales_Purchase_Agreement.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Sales_Purchase_Agreement</fullName>
    <active>true</active>
    <label>Sale &amp; Purchase Agreement</label>
</RecordType>