force-app/main/default/objects/leaseworks__Non_Lease_Agreements__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Asset__c</columns>
    <columns>leaseworks__Contract_Signed_Date__c</columns>
    <columns>leaseworks__Contract_Type__c</columns>
    <columns>leaseworks__Start_Date__c</columns>
    <columns>leaseworks__End_Date__c</columns>
    <columns>leaseworks__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>